tests/errors/compiler/expected_end/no_end_in_func.c
void main()
{

}

void func(int a)
{
	print(a);
